# gestureController

./: CMakeLists.txt  README.md  SendKeys1.cpp  SendKeys1.h  thesis_chamfer_shape_updated.cpp  thesis_chamfer_training_new_updated.h
data/: non_skin.txt  skin.txt
data/thesis_shapes/: Doc3.docx  Thumbs.db  results.txt  traject1.txt  traject2.txt  traject3.txt  traject4.txt  trajects_backup.txt  ~$Doc3.docx
data/thesis_shapes/outputs/: Ananth_test.docx  Thumbs.db  rajesh_test.docx  raman_test.docx  ~$Doc1.docx
data/thesis_shapes/outputs/Alek_test/: Thumbs.db
data/thesis_shapes/outputs/new/: Thumbs.db
lb_blur_detect/: BlurDetector.cpp  BlurDetector.h  DeblurContext.h  Deconvolution.cpp  Deconvolution.h
lb_blur_detect/blur_modes/: Blur.h  CMakeLists.txt  FocusBlur.h  GaussianBlur.h  MotionBlur.h
